--- a/src/main/resources/inf/unideb/szfm/makar/ShoppingListView.fxml
+++ b/src/main/resources/inf/unideb/szfm/makar/ShoppingListView.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="inf.unideb.szfm.makar.ShoppingListView"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="inf.unideb.szfm.makar.ShoppingListController">
+   <children>
+      <ListView fx:id="ShoppingListView" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button layoutX="248.0" layoutY="14.0" mnemonicParsing="false" onAction="#onAddElementButtonClick" text="Hozzáadás" />
+      <Button layoutX="248.0" layoutY="52.0" mnemonicParsing="false" onAction="#onDeleteElementButtonClick" text="Törlés" />
+      <Button layoutX="248.0" layoutY="89.0" mnemonicParsing="false" onAction="#onOrderButtonClick" text="Rendezés" />
+   </children>
 </AnchorPane>
