--- a/src/main/resources/inf/unideb/szfm/makar/ShoppingListAddElementView.fxml
+++ b/src/main/resources/inf/unideb/szfm/makar/ShoppingListAddElementView.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="inf.unideb.szfm.makar.ShoppingListAddElementView"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="inf.unideb.szfm.makar.ShoppingListAddElementController">
+   <children>
+      <TextField fx:id="AddElementTextField" layoutX="226.0" layoutY="81.0" />
+      <Button layoutX="226.0" layoutY="131.0" mnemonicParsing="false" onAction="#onAddElementButtonClick" text="Hozzáad" />
+      <Button layoutX="324.0" layoutY="131.0" mnemonicParsing="false" onAction="#onShowListButtonClick" prefHeight="26.0" prefWidth="62.0" text="Lista" />
+   </children>
 </AnchorPane>
